<resources>
    <string name="app_name">Translater</string>
    <string name="tv_diplome_discribe">Дипломная работа\nМоргачёва Виктора Сергеевича</string>
    <string name="test">Проверка</string>
    <string name="has_not_internet">Отсутствует соединение с интернетом</string>
    <string name="enable_language_determinate">Автоопределение</string>
    <string name="menu_about">О программе</string>
    <string name="btn_guide">Справочник</string>
    <string name="btn_learn">Учить</string>
    <string name="btn_translater">Переводчик</string>
    <string name="btn_exit">Выход</string>
    <string name="btn_about">О Программе</string>
    <string name="select_language">Выберите язык</string>
    <string name="verbs">Глаголы</string>
    <string name="pronouns">Местоимения</string>
    <string name="time">Времена</string>
    <string name="nouns">Существительное</string>
    <string name="adjectives">Прилагательное</string>
    <string name="Todo">TODO</string>
    <string name="verbs_times">Времена</string>
    <string name="strings">Предложения</string>
    <string name="songs">Звуки</string>
    <string name="phonetics">Фонетика</string>
    <string name="numeral">Числительное</string>
    <string name="enumeration">Числительное</string>
    <string name="colors">Цвета</string>
    <string name="vegetables">Овощи</string>
    <string name="clothes">Одежда</string>
    <string name="questions">Вопросы</string>
    <string name="fruits">Фрукты</string>
    <string name="animals">Животные</string>
    <string name="sports">Спорт</string>
    <string name="True">Правда</string>
    <string name="False">Ложь</string>

    <string name="input_translate">Введите перевод</string>
    <string name="main_translate">Перевести</string>
    <string name="hobby">Хобби</string>
    <string name="btn_setup">Настройки</string>
    <string name="auto_definition">Автоопределение языка</string>
    <string name="native_laguage">Родной язык</string>
    <string name="learn_language">Учим язык</string>
    <string name="btn_back">Назад</string>
    <string name="show_image">Показывать изображение</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="tv_diplome_discribe1">ЫГУ Государственный Университет\nим Тыныстанова</string>
    <string name="tv_diplome_discribe2">Выпускная дипломная работа</string>
    <string name="btn_enter">Войти</string>
    <string name="english">Английский</string>
    <string name="kyrgyzs">Кыргызский</string>
    <string name="russian">Русский</string>
    <string name="english_tv_1">Имя существительное – это знаменательная часть речи, обозначающая предмет в самом широком смысле.  Например, существительные могут обозначать:</string>
    <string name="english_cv1_1">Car</string>
    <string name="book">Книга</string>
    <string name="car">Автомобиль</string>
    <string name="english_cv1_2">Book</string>
    <string name="english_cv1_3">Cat</string>
    <string name="cat">Кошка</string>
    <string name="english_cv1_4">Human</string>
    <string name="human">Человек</string>
    <string name="english_cv1_5">Mountain</string>
    <string name="mountain">Гора</string>
    <string name="english_tv_2">Строение английских существительных По морфологическому составу существительные можно разделить на простые, производные и составные.  Простые существительные (simple nouns) состоят из одного корня:</string>
    <string name="english_cv2_1">Home</string>
    <string name="home">Дом</string>
    <string name="english_cv2_2">Dog</string>
    <string name="dog">Собака</string>
    <string name="english_cv2_3">Sky</string>
    <string name="sky">Небо</string>
    <string name="english_tv_3">Производные существительные (derived nouns/derivatives) состоят из корня и одной или нескольких морфем (приставок или суффиксов):</string>
    <string name="english_cv3_1">Friendship</string>
    <string name="friendship">Дружба</string>
    <string name="english_cv3_2">Richness</string>
    <string name="richness">Богатство</string>
    <string name="english_cv3_3">Teacher</string>
    <string name="teacher">Учитель</string>
    <string name="english_tv_4">Для существительных характерны такие суффиксы, как -ant/-ent, -dom, -er/-or/-ar, -hood, -ion, -ity, -ment, -ness, -ship.  Составные существительные (compound nouns) состоят по крайней мере из двух корней:</string>
    <string name="english_cv4_1">Seaman</string>
    <string name="seaman">Моряк</string>
    <string name="english_cv4_2">Editor-in-chief</string>
    <string name="editor_in_chief">Главный редактор</string>
    <string name="english_tv_5">Классификация существительных в английском языке Существительные делятся на имена собственные и нарицательные.  Имена собственные (proper nouns) обозначают единственные в своем роде предметы или предметы, выделяемые из общего класса:</string>
    <string name="english_cv5_1">Africa</string>
    <string name="africa">Африка</string>
    <string name="english_cv5_2">the Greeks</string>
    <string name="the_greeks">Греки</string>
    <string name="english_tv_6">Имена собственные пишутся с большой буквы (включая названия месяцев и дней недели, в отличие от русского языка). Если это сочетание нескольких слов, то все они, кроме артиклей и предлогов, тоже пишутся с большой буквы (the United States of America).  Имена нарицательные (common nouns) – это общие названия для всех однородных предметов:</string>
    <string name="english_cv6_1">Girl</string>
    <string name="girl">Девочка</string>
    <string name="english_tv_verbs_1">Глагол – это самостоятельная часть речи, обозначающая действие или состояние предмета или лица. В английском языке признаком глагола в неопределенной форме является частица to.</string>
    <string name="english_verbs_cv1_1">To sing</string>
    <string name="to_sing">Петь</string>
    <string name="english_cv_verbs_1_2">To draw</string>
    <string name="to_draw">Рисовать</string>
    <string name="english_cv_verbs_1_3">To exist</string>
    <string name="to_exit">Cуществовать</string>
    <string name="english_cv_verbs_1_4">To stand</string>
    <string name="to_stand">Стоять</string>
    <string name="english_tv_verbs_2">Чаще всего именно глагол является ключевой основой, вокруг которой строится предложение, поэтому глаголы почти во всех языках следуют сложным правилам грамматики и имеют большое число форм.  Структура английских глаголов По структуре английские глаголы делятся на простые, производные, сложные и составные.  Простые глаголы состоят только из одного корня:</string>
    <string name="english_cv_verbs2_1">Walk</string>
    <string name="english_cv_verbs2_2">Play</string>
    <string name="english_cv_verbs2_3">Eat</string>
    <string name="walk">Идти</string>
    <string name="play">Играть</string>
    <string name="eat">Есть</string>
    <string name="english_tv_verbs_3">В производных глаголах, кроме корня, есть приставка и/или суффикс:</string>
    <string name="english_cv_verbs3_2">Unload</string>
    <string name="english_cv_verbs3_3">Reread</string>
    <string name="english_cv_verbs3_1">Replay</string>
    <string name="unload">Разгружать</string>
    <string name="reread">Перечитать</string>
    <string name="replay">Переиграть</string>
    <string name="english_tv_verbs_4">Сложные глаголы состоят из двух основ:</string>
    <string name="english_cv_verbs4_1">Underline</string>
    <string name="english_cv_verbs4_2">Whitewash</string>
    <string name="english_cv_verbs4_3">Overtake</string>
    <string name="underline">Подчёркивать</string>
    <string name="whitewash">Белить</string>
    <string name="overtake">Догонять</string>
    <string name="english_tv_verbs_5">Составные (фразовые) глаголы состоят из глагола и наречия или предлога:</string>
    <string name="english_cv_verbs5_1">Look out</string>
    <string name="english_cv_verbs5_2">Stand up</string>
    <string name="english_cv_verbs5_3">Pull off</string>
    <string name="pull_off">Снимать</string>
    <string name="stand_up">Выдерживать</string>
    <string name="look_out">Высматривать</string>
    <string name="english_tv_pronouns_1">Местоимение – это часть речи, обозначающая, но не называющая прямо предметы, лица, их свойства и отношения или дающая их временную и пространственную характеристику.  По своему значению местоимения в английском языке делятся на несколько групп. Ниже приведен список этих групп и соответствующих им английских местоимений.</string>
    <string name="english_pronouns_cv1_1">I</string>
    <string name="english_cv_pronouns_1_2">You</string>
    <string name="english_cv_pronous_1_3">He</string>
    <string name="english_cv_pronous_1_4">She</string>
    <string name="english_pronouns_cv1_5">It</string>
    <string name="english_cv_pronouns_1_6">We</string>
    <string name="english_cv_pronous_1_7">They</string>
    <string name="english_cv_pronous_1_8">Me</string>
    <string name="english_pronouns_cv1_9">Him</string>
    <string name="english_cv_pronouns_1_10">Her</string>
    <string name="english_cv_pronous_1_11">Us</string>
    <string name="english_cv_pronous_1_12">Them</string>
    <string name="them">Они</string>
    <string name="us">Мы</string>
    <string name="her">Ее</string>
    <string name="they">Они</string>
    <string name="we">Мы</string>
    <string name="it">Оно</string>
    <string name="she">Она</string>
    <string name="he">Он</string>
    <string name="you">Ты(Вы)</string>
    <string name="i">Я</string>
    <string name="english_tv_pronouns_2">Притяжательные</string>
    <string name="english_tv_pronouns_1_1">Личные</string>
    <string name="english_pronouns_cv2_1">мой, моя</string>
    <string name="english_pronouns1_cv2_1">My</string>
    <string name="english_cv_pronouns2_2">Your</string>
    <string name="english_cv_pronous2_4">Her</string>
    <string name="english_cv_pronous2_3">His</string>
    <string name="english_pronouns_cv2_5">Its</string>
    <string name="english_cv_pronouns2_6">Our</string>
    <string name="english_cv_pronous2_7">Their</string>
    <string name="english_cv_pronous2_8">Mine</string>
    <string name="english_cv_pronous2_9">Yours</string>
    <string name="mine">Мой</string>
    <string name="their">Их</string>
    <string name="our">Наш</string>
    <string name="its">его, ее, свой</string>
    <string name="his">Его</string>
    <string name="your">твой, ваш</string>
    <string name="my">мой, моя</string>
    <string name="english_tv_pronoun_3">Указательные</string>
    <string-array name="languages">
        <item>Кыргызский</item>
        <item>Русский</item>
        <item>Английский</item>
    </string-array>
</resources>
