<?xml version="1.0" encoding="utf-8"?>


<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:rowCount="5"
    android:columnCount="2"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_sport"
        style="@style/menu_button"
        android:text="@string/sports" />

    <Button
        android:id="@+id/btn_fruits"
        style="@style/menu_button"
        android:text="@string/fruits" />

    <Button
        android:id="@+id/btn_vegetables"
        style="@style/menu_button"
        android:text="@string/vegetables" />

    <Button
        android:id="@+id/btn_colors"
        style="@style/menu_button"
        android:text="@string/colors" />

    <Button
        android:id="@+id/btn_questions"
        style="@style/menu_button"
        android:text="@string/questions" />

    <Button
        android:id="@+id/btn_animals"
        style="@style/menu_button"
        android:text="@string/animals" />

    <Button
        android:id="@+id/btn_clothes"
        style="@style/menu_button"
        android:text="@string/clothes" />

    <Button
        android:id="@+id/btn_hobby"
        style="@style/menu_button"
        android:text="@string/hobby"/>


</GridLayout>