<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_guide"
        style="@style/menu_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_guide" />

    <Button
        android:id="@+id/btn_learn"
        style="@style/menu_button"
        android:layout_gravity="center"
        android:text="@string/btn_learn" />

    <Button
        android:id="@+id/btn_translater"
        style="@style/menu_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_translater" />

    <Button
        android:id="@+id/btn_about"
        style="@style/menu_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_about" />

    <Button
        android:id="@+id/btn_setup"
        style="@style/menu_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_setup" />

    <Button
        android:id="@+id/btn_exit"
        style="@style/menu_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_exit" />

</LinearLayout>

