<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_true_count"
            style="@style/english_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:text="@string/True"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/tv_false_count"
            style="@style/english_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:text="@string/False"
            android:textColor="@color/red" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_question"
        style="@style/english_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="Учитель" />


    <ImageView

        android:id="@+id/iv_picture"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:columnCount="2"
        android:foregroundGravity="center"
        android:orientation="horizontal"
        android:rowCount="2">

        <Button
            android:id="@+id/btn_left_top"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="70dp"
            android:text="@string/yes" />

        <Button
            android:id="@+id/btn_right_top"
            android:text="@string/yes" />

        <Button
            android:id="@+id/btn_left_bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="70dp"
            android:text="@string/yes" />

        <Button
            android:id="@+id/btn_right_bottom"
            android:text="@string/yes" />


    </GridLayout>

</LinearLayout>
