<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_true_count"
            style="@style/english_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:text="@string/True"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/tv_false_count"
            style="@style/english_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/False"
            android:textColor="@color/red" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_view"
        style="@style/english_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="Учитель" />


    <ImageView

        android:id="@+id/iv_picture"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" />


    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:hint="@string/input_translate"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_show_result"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:src="@drawable/questions" />

        <ImageView
            android:id="@+id/iv_go"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/go_blue" />



    </LinearLayout>




</LinearLayout>
